--- a/staffcheck-backend/src/main/resources/application.properties
+++ b/staffcheck-backend/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=staffcheck-backend
 
 
 server.port=8085
-spring.datasource.url=jdbc:mysql://localhost:3306/EmployeeManagement?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql:3306/EmployeeManagement?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
-jwt.secret=9faa372517ac1d389758d375ûfc97acf9Cf542277f26fec1ce4593e93f64e338
+
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.mvc.static-path-pattern=/static/**
 logging.level.org.springframework.security=DEBUG
