--- a/staffcheck-frontend/angular.json
+++ b/staffcheck-frontend/angular.json
@@ -21,8 +21,16 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              {
+                "glob": "**/*",
+                "input": "src/assets/",
+                "output": "/assets/"
+              },
+              {
+                "glob": "**/*",
+                "input": "public",
+                "output": "/public"
+              }
             ],
             "styles": [
               "src/styles.css",
